--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,95 @@
   text-align: center;
 }
 
+#navbar-about {
+  font-size: meduim;
+}
+
+#navbar-skills {
+  font-size: medium;
+}
+
+#navbar-projects {
+  font-size: medium;
+}
+
+#navbar-resume {
+  font-size: medium;
+}
+
+#navbar-hire-me {
+  font-size: medium;
+}
+
+#navbar-about:hover {
+  font-size: large;
+  color: #000;
+}
+
+#navbar-skills:hover {
+  font-size: large;
+  color: #000;
+}
+
+#navbar-projects:hover {
+  font-size: large;
+  color: #000;
+}
+
+#navbar-resume:hover {
+  font-size: large;
+  color: #000;
+}
+
+#navbar-hire-me:hover {
+  font-size: large;
+  color: #000;
+}
+
+.anchor-el {
+  text-decoration: none;
+  color: #fff;
+}
+
+.local-anchor-el {
+  font-family: "Bree serif";
+  font-size: xxx-large;
+}
+
+* {
+  font-family: "Garamond";
+}
+
+ul {
+  list-style: radial-gradient(#fff, lawngreen);
+}
+
+.react-project-ul {
+  list-style: radial-gradient(#fff, orange);
+}
+
+li {
+  padding-left: 8px;
+}
+
+button:hover {
+  color: gold;
+}
+
+a:hover {
+  color: lime;
+}
+
+.my-name {
+  font-weight: 600;
+  font-size: xx-large;
+  font-family: "Book Antique";
+}
+
+h2 {
+  font-family: "Book antique";
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +124,117 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.ultimate-container {
+  background: #2d2d2d;
+  color: #ffffff;
+  padding: 10px 20px 0px 20px;
+  align-items: center;
+}
+
+.dev-desc {
+  display: flex;
+  justify-content: space-between;
+  width: 80vw;
+  align-items: center;
+  color: #f6f8f8;
+  font-family: fantasy;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.nav-container {
+  background-color: #000;
+  width: 100%;
+  padding: 0px;
+}
+
+.about-me-ul {
+  font-size: larger;
+  font-family: "Roboto";
+  font-weight: 500;
+  list-style: disc;
+}
+
+.my-skills-container {
+  border-radius: 20px;
+  margin-top: 20px;
+}
+
+.carousel-image {
+  border-radius: 20px;
+}
+
+@media screen and (max-width: 976px) {
+  .project-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+  }
+}
+
+.project-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.project-image {
+  width: 360px;
+  height: 200px;
+  border-radius: 12px;
+  border: 2px solid #00ffa6;
+  margin: 0px 10px 0px 20px;
+}
+
+.open-to-job-type {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 600;
+}
+
+.want-to-hire-container {
+  background: #3d434c;
+  padding: 40px 30px 0px 100px;
+  border-top-left-radius: 80px;
+  border-top-right-radius: 20px;
+  color: #000;
+  margin-top: 40px;
+  margin-bottom: 0px;
+}
+
+.form-element {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.form-element-input {
+  width: 90%;
+  border-radius: 10px;
+  padding: 8px 2px 8px 2px;
+  border: 0;
+}
+
+.button-icons-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 92vw;
+  background: #000;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  background-size: cover;
+  margin-bottom: 0px;
+}
+
+.button-icons {
+  background: transparent;
+  font-size: 56px;
+  border: 0;
 }
