--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@
 
 .resume-el {
   color: springgreen;
-  font-size: 40px;
+  font-size: 36px;
 }
 
 .resume-el:hover {
@@ -116,15 +116,6 @@ h2 {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .my-name {
   font-weight: 400;
   font-size: x-large;
@@ -155,7 +146,7 @@ h2 {
 
 .name-reveal {
   font-family: "Book antique";
-  color: lime;
+  color: rgb(0, 200, 0);
   text-decoration: underline;
   font-weight: bolder;
 }
@@ -174,7 +165,7 @@ h2 {
   top: 0;
   left: 0;
   color: #fff;
-  animation: reveal 2s steps(100);
+  animation: reveal 800ms steps(100);
   overflow: hidden;
 }
 
@@ -183,8 +174,8 @@ h2 {
   position: absolute;
   top: 0;
   left: 0;
-  color: rgb(0, 0, 98);
-  animation: reveal 4s steps(80);
+  color: rgb(0, 0, 180);
+  animation: reveal 3200ms steps(100);
   overflow: hidden;
 }
 
@@ -192,7 +183,7 @@ h2 {
   0% {
     width: 0%;
   }
-  92% {
+  100% {
     width: 100%;
   }
 }
@@ -238,9 +229,14 @@ h2 {
   margin: 0px 2px 0px 16px;
 }
 
+.resume-text {
+  font-size: large;
+}
+
 .open-to-job-type {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   font-weight: 700;
 }
 
@@ -284,11 +280,15 @@ h2 {
 
 .button-icons {
   background: transparent;
-  font-size: 48px;
+  font-size: 40px;
   border: 0;
 }
 
-@media screen and (max-width: 816px) {
+@media screen and (max-width: 866px) {
+  * {
+    font-family: "Roboto";
+  }
+
   .nav-container {
     display: flex;
   }
@@ -296,7 +296,6 @@ h2 {
   .my-name {
     font-weight: 800;
     font-size: larger;
-    font-family: "Roboto";
   }
 
   .ultimate-container {
@@ -335,6 +334,10 @@ h2 {
     margin-bottom: 40px;
   }
 
+  .project-title {
+    font-size: 20px;
+  }
+
   .projects-ul {
     font-size: 16px;
   }
@@ -349,6 +352,15 @@ h2 {
     border-radius: 8px;
     border: 2px solid #00ffa6;
     margin: 0px 10px 0px 20px;
+  }
+
+  .resume-text {
+    font-size: small;
+  }
+
+  .resume-el {
+    color: springgreen;
+    font-size: 28px;
   }
 
   .open-to-job-type {
@@ -399,7 +411,7 @@ h2 {
 
   .button-icons {
     background: transparent;
-    font-size: 36px;
+    font-size: 28px;
     border: 0;
   }
 }
